--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Links</title>
+    <title>Ababil-Mustax</title>
     <meta name="description" content="Links to useful pages for my followers" />
     <script
       src="https://kit.fontawesome.com/9b3bbb804d.js"
@@ -21,13 +21,13 @@
         <div class="block">
           <div class="profile">
             <img src="images/profile.jpg" alt="profile photo" />
-            <h1>Alex Hyett | Developer</h1>
+            <h1>Ababil Mustax | Backend-eveloper</h1>
             <div class="location">
-              <i class="fas fa-map-marker-alt"></i> London, United Kingdom
+              <i class="fas fa-map-marker-alt"></i> Bandung, West-Java
             </div>
             <div class="bio">
               <div>💻 Sharing my developer journey & love of tech</div>
-              <div>👨🏻‍🔬 Physics Graduate & Tech Enthusiast</div>
+              <div>👨🏻‍🔬 Tech Enthusiast</div>
             </div>
           </div>
           <div class="links">
@@ -36,7 +36,7 @@
             </a>
           </div>
         </div>
-        <a href="https://instagram.com/alexhyettdev" class="block link">
+        <a href="https://www.instagram.com/bi.ell._/" class="block link">
           <div class="image-float instagram">
             <div class="beacon instagram"></div>
             <div class="image">
@@ -67,22 +67,22 @@
           </div>
         </a>
 
-        <a href="https://alexhyett.medium.com/" class="block link">
-          <div class="image-float medium">
-            <div class="image">
-              <img src="images/medium.svg" />
-            </div>
-          </div>
-          <div>
-            <h2>Medium</h2>
-            <div>alexhyett.medium.com</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
+<!--        <a href="https://alexhyett.medium.com/" class="block link">-->
+<!--          <div class="image-float medium">-->
+<!--            <div class="image">-->
+<!--              <img src="images/medium.svg" />-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <h2>Medium</h2>-->
+<!--            <div>alexhyett.medium.com</div>-->
+<!--          </div>-->
+<!--          <div class="arrow">-->
+<!--            <i class="fas fa-arrow-right"></i>-->
+<!--          </div>-->
+<!--        </a>-->
 
-        <a href="https://github.com/alexhyett/" class="block link">
+        <a href="https://github.com/birdfromhell/" class="block link">
           <div class="image-float github">
             <div class="image">
               <img src="images/github.svg" />
