--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div>
             <h2>Instagram</h2>
-            <div>@alexhyettdev</div>
+            <div>@bi.ell._</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
