--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="links">
-            <a href="mailto:hello@example.com" class="contactbutton">
+            <a href="iemmustaq@gmail.com" class="contactbutton">
               <i class="fas fa-envelope-open"></i> Email
             </a>
           </div>
