--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </a>
 
-        <a href="https://twitter.com/alexhyettdev" class="block link">
+        <a href="https://twitter.com/Ababil88454629" class="block link">
           <div class="image-float twitter">
             <div class="image">
               <img src="images/twitter.svg" />
@@ -60,7 +60,7 @@
           </div>
           <div>
             <h2>Twitter</h2>
-            <div>@alexhyettdev</div>
+            <div>@Ababil</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
@@ -90,14 +90,14 @@
           </div>
           <div>
             <h2>GitHub</h2>
-            <div>github.com/alexhyett</div>
+            <div>github.com/birdfromhell</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
           </div>
         </a>
 
-        <a href="https://dev.to/alexhyettdev" class="block link">
+        <a href="https://dev.to/birdfromhell" class="block link">
           <div class="image-float dev">
             <div class="image">
               <img src="images/dev.png" />
@@ -105,27 +105,27 @@
           </div>
           <div>
             <h2>DEV</h2>
-            <div>dev.to/alexhyettdev</div>
+            <div>dev.to/birdfromhell</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
           </div>
         </a>
 
-        <a href="https://www.linkedin.com/in/alexhyett/" class="block link">
-          <div class="image-float linkedin">
-            <div class="image">
-              <img src="images/linkedin.svg" />
-            </div>
-          </div>
-          <div>
-            <h2>LinkedIn</h2>
-            <div>linkedin.com/in/alexhyett</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
+<!--        <a href="https://www.linkedin.com/in/alexhyett/" class="block link">-->
+<!--          <div class="image-float linkedin">-->
+<!--            <div class="image">-->
+<!--              <img src="images/linkedin.svg" />-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div>-->
+<!--            <h2>LinkedIn</h2>-->
+<!--            <div>linkedin.com/in/alexhyett</div>-->
+<!--          </div>-->
+<!--          <div class="arrow">-->
+<!--            <i class="fas fa-arrow-right"></i>-->
+<!--          </div>-->
+<!--        </a>-->
       </div>
     </div>
   </body>
