--- a/index.html
+++ b/index.html
@@ -36,9 +36,24 @@
             </a>
           </div>
         </div>
+
+        <a href="https://www.ababil-mustax.me" class="block link">
+          <div class="image-float website">
+            <div class="image">
+              <img src="images/website.svg" />
+            </div>
+          </div>
+          <div>
+            <h2>Website</h2>
+            <div>www.ababil-mustax.me</div>
+          </div>
+          <div class="arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </a>
+
         <a href="https://www.instagram.com/bi.ell._/" class="block link">
           <div class="image-float instagram">
-            <div class="beacon instagram"></div>
             <div class="image">
               <img src="images/instagram.svg" />
             </div>
