--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="outer">
