--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="links">
-            <a href="mailto:iemmustaq@gmail.com" class="contactbutton">
+            <a href="mailto:contact@ababil-mustax.me" class="contactbutton">
               <i class="fas fa-envelope-open"></i> Email
             </a>
           </div>
@@ -116,7 +116,7 @@
         <a href="https://dev.to/birdfromhell" class="block link">
           <div class="image-float dev">
             <div class="image">
-              <img src="images/dev.png" />
+              <img src="images/dev.svg" />
             </div>
           </div>
           <div>
