--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
         <a href="https://www.ababil-mustax.me" class="block link">
           <div class="image-float website">
             <div class="image">
+              <img src="images/blog.svg" />
+            </div>
+          </div>
+          <div>
+            <h2>My Blog</h2>
+            <div>www.blog.ababil-mustax.me</div>
+          </div>
+          <div class="arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </a>
+
+               <a href="https://www.ababil-mustax.me" class="block link">
+          <div class="image-float website">
+            <div class="image">
               <img src="images/website.svg" />
             </div>
           </div>
