change website link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
 
-        <a href="https://www.ababil-mustax.me" class="block link">
+        <a href="https://bio.ababil-mustax.me" class="block link">
           <div class="image-float website">
             <div class="image">
               <img src="images/blog.svg" />
@@ -53,7 +53,7 @@
           </div>
         </a>
 
-               <a href="https://www.ababil-mustax.me" class="block link">
+               <a href="https://ababil-mustax.me" class="block link">
           <div class="image-float website">
             <div class="image">
               <img src="images/website.svg" />
