change website link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
 
-        <a href="https://bio.ababil-mustax.me" class="block link">
+        <a href="https://blog.ababil-mustax.me" class="block link">
           <div class="image-float website">
             <div class="image">
               <img src="images/blog.svg" />
