--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- HTML Meta Tags -->
-    <title>Sagnik's Links</title>
-    <meta name="description" content="Sagnik's Link " />
+    <title>My Bio links</title>
+    <meta name="description" content="Ababil Mustax " />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://bio.devgossips.vercel.app/" />
+    <meta property="og:url" content="https://bio.ababil-mustax.me" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Sagnik's Links" />
+    <meta property="og:title" content="Ababil Links" />
     <meta property="og:description" content="Sagnik's Link " />
     <meta
       property="og:image"
